--- a/css/leon.css
+++ b/css/leon.css
@@ -23,7 +23,6 @@
     margin: 0;
 }
 .special-heading +p {
-
     margin: -30px 0 0;
     font-size: 20px;
     text-align: center;
@@ -48,12 +47,9 @@ body {
     font-family: "Work Sans", sans-serif;
 
 }
-
 .parent {
     background-color: #eee;
 }
-
-
 .container{
     padding-left: 15px;
     padding-right: 15px;
@@ -61,7 +57,6 @@ body {
     margin-right: auto;
     width: 600px;
 }
-
 /* small */
 @media (min-width: 768px) {
     .container {
@@ -69,74 +64,60 @@ body {
     }
 }
 
-
 /* medium */
-
 @media (min-width: 992px) {
     .container {
         width: 970px
     }
 }
-
 /* large */
-
 @media (min-width: 1200px) {
     .container {
         width: 1170px;
     }
 }
-
 /* end global rules */
 
+/* start header */
 .header {
     padding: 20px;
 }
-
 .header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 .header .logo {
     width: 60px;
 }
-
 .header .links {
     position: relative;
 }
-
 .header .links .icon {
     width: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
 }
-
-.header .links:hover .icon span:nth-child(2) {
-    width: 100%;
-}
-
 .header .links .icon span {
     background-color: black;
     margin-bottom: 5px;
     height: 3px;
 
 }
-
 .header .links .icon span:first-child {
     width: 100%
 }
-
 .header .links .icon span:nth-child(2) {
     width: 50%;
     transition: 0.3s;
 }
-
 .header .links .icon span:last-child {
     width: 100%;
 }
-
+.header .links:hover .icon span:nth-child(2) {
+    width: 100%;
+}
 .header .links ul {
     position: absolute;
     margin: 0;
@@ -149,11 +130,9 @@ body {
     display: none;
     z-index: 1;
 }
-
 .header .links:hover ul {
     display: block;
 }
-
 .header .links ul::before {
     content: "";
     border-width: 10px;
@@ -163,7 +142,6 @@ body {
     right: 5px;
     top: -20px;
 }
-
 .header .links ul li a {
     display: block;
     padding: 15px;
@@ -171,14 +149,13 @@ body {
     color: #333;
     transition: 0.3s;
 }
-
 .header .links ul li a:hover {
     padding-left: 25px;
 }
-
 .header .links ul li:not(:last-child) a {
     border-bottom: 1px solid #ddd;
 }
+/* end header */
 
 /* landing */
 .landing {
@@ -208,6 +185,7 @@ body {
     font-size: 19px;
     line-height: 1.8;
 }
+/* end landing */
 
 /* start features */
 .features{
@@ -228,7 +206,7 @@ body {
 }
 
 .features .feat .i {
-     color: var (--main-color)
+    color: var(--main-color)
 }
 
 .features .feat h3 {
@@ -241,6 +219,8 @@ body {
     color: #777;
     font-size: 17px;
 }
+/* end features */
+
 
 /* start services */
 .services {
@@ -290,7 +270,7 @@ body {
     position: relative;
 }
 .services .services-content  .image img {
-    width: 260 px;
+    width: 260px;
 }
 .services .services-content .image::before{
 content: "";
@@ -352,20 +332,15 @@ z-index: -1;
 
 /*start about*/
 .about{
-    padding-top: var(--section-padding);
-    padding-bottom: calc(var(--section-padding) +60px);   
+    padding-top:var(--section-padding);
+    padding-bottom: calc(var(--section-padding)+ 60px);
 }
-
-
-
 .about .about-content{
     margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
-
 @media (max-width: 991px) {
     .about .about-content {
         flex-direction: column;
@@ -464,7 +439,7 @@ z-index: -1;
 .contact .info .social{
     display: flex ;
     justify-content: center;
-    margin-top: 20;
+    margin-top: 20px;
     font-size: 16px;
   
 }
@@ -479,7 +454,7 @@ z-index: -1;
         font-size: 25px;
     }
 }
-/* end social */
+/* end contact*/
 
 /* start footer  */
 .footer{
